<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/site_navigation"
        android:icon="@drawable/ic_navigation"
        android:title="@string/title_menu"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/itemMain"
                android:title="@string/menu_title_main"
                app:showAsAction="never" />
            <item
                android:id="@+id/itemEra"
                android:title="@string/menu_title_era"
                app:showAsAction="never" />
            <item
                android:id="@+id/itemTop5"
                android:title="@string/menu_title_top"
                app:showAsAction="never" />
            <item
                android:id="@+id/itemMedia"
                android:title="@string/menu_title_media"
                app:showAsAction="never" />
            <item
                android:id="@+id/itemQuiz"
                android:title="@string/menu_title_quiz"
                app:showAsAction="never" />
            <item
                android:id="@+id/itemInfo"
                android:title="@string/menu_title_info"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>