<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"/>

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_title_main" />
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_menu_era"
            android:title="@string/menu_title_era" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_title_media" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_top5"
            android:title="@string/menu_title_top" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_quiz"
            android:title="@string/menu_title_quiz" />


</menu>
