<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabVideos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="lQpPdQrXMbE"
                app:autoPlay="false"
                app:showFullScreenButton="false"
                app:showYouTubeButton="false"
                android:id="@+id/youtube_player_view_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vid_desc1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:autoPlay="false"
                app:showFullScreenButton="false"
                app:showYouTubeButton="false"
                app:videoId="WXg8P0u9W9I" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_pele"
                android:textAlignment="center"
                android:textSize="18sp" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:autoPlay="false"
                app:showFullScreenButton="false"
                app:showYouTubeButton="false"
                app:videoId="VmyssDtOiLM" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_maradona"
                android:textAlignment="center"
                android:textSize="18sp" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                app:autoPlay="false"
                app:showFullScreenButton="false"
                app:showYouTubeButton="false"
                app:videoId="it0qg8CilYo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vid_desc4"
                android:textAlignment="center"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>